--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -17,8 +17,8 @@ encrypt_directory=false
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release=""
-debug/export_console_script=0
+custom_template/release="D:/Dev/Godot/godot/bin/godot.windows.template_release.x86_64.exe"
+debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/bptc=true
 texture_format/s3tc=true
@@ -35,12 +35,12 @@ application/modify_resources=true
 application/icon=""
 application/console_wrapper_icon=""
 application/icon_interpolation=4
-application/file_version=""
-application/product_version=""
+application/file_version="1.0.0.0"
+application/product_version="1.0.0.0"
 application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
+application/product_name="RGBA Calculator"
+application/file_description="A simple RGBA calculator"
+application/copyright="Copyleft"
 application/trademarks=""
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
