--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -17,7 +17,7 @@ encrypt_directory=false
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release="D:/Dev/Godot/godot/bin/godot.windows.template_release.x86_64.exe"
+custom_template/release=""
 debug/export_console_wrapper=1
 binary_format/embed_pck=true
 texture_format/bptc=true
